# rust-embedded-intro-slides

./: LICENSE  TODO.md  alacritty.yml  test.cpp  useful-links.md
0-language/: 0-cover.md  0.5-intro.md  tmux-session.yaml
0-language/1-hello-world/: Cargo.toml
0-language/1-hello-world/src/: main.rs
0-language/2-variables/: Cargo.toml
0-language/2-variables/src/: main.rs
0-language/3-functions/: Cargo.toml
0-language/3-functions/src/: main.rs
0-language/4-custom-types/: Cargo.toml
0-language/4-custom-types/src/: asso_fun.rs  enums.rs  main.rs
0-language/5-traits/: Cargo.toml
0-language/5-traits/src/: main.rs
0-language/6-modules/: Cargo.toml
0-language/6-modules/src/: errors.rs  lib.rs  main.rs  prelude.rs
0-language/6-modules/src/bot/: commands.rs  mod.rs  reactions.rs
0-language/7-macros/: Cargo.toml
0-language/7-macros/src/: main.rs
0-language/8-errors/: database.json
0-language/8-server/: Cargo.toml
0-language/8-server/src/: lib.rs
0-language/9-errors/: Cargo.toml
0-language/9-errors/src/: main.rs
1-ecosystem/: tmux-session.yaml
1-ecosystem/3-bindgens/: Cargo.toml  build.rs  perf.data  perf.data.old  shell.nix
1-ecosystem/3-bindgens/csrc/: my_c_lib.c  my_c_lib.h
1-ecosystem/3-bindgens/src/: lib.rs  main.rs
2-embedded/: 0-unsafe.md  1-std-split.md  2-ecosystem.md  tmux-session.yaml
3-bonus/: 0-bonus.md  tmux-session.yaml
n-miri/: Cargo.toml
n-miri/src/: main.rs
